--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,15 @@
 button {
     border-radius: 12px;
-    color: blue;
+    background-color: blue;
+    height: 18px;
+}
+
+aside {
+    padding: 10px;
+    background-color: lightcoral;
+    color: darkslategray;
+    border-radius: 10px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
