--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,7 @@ button {
     border-radius: 12px;
     background-color: blue;
     height: 18px;
-}
+};
 
 aside {
     padding: 10px;
@@ -12,4 +12,4 @@ aside {
     position: absolute;
     top: 10px;
     right: 10px;
-}
+};
